--- a/mail.html
+++ b/mail.html
@@ -14,7 +14,7 @@
         <nav>
             <img src="images/Hidden Genius Project Logo.png" class="logo">
             <ul id="sidemenu">
-                <li><a href="header">Home</a></li>
+                <li><a href="Home">Home</a></li>
                 <li><a href="about">About</a></li>
                 <li><a href="service">Services</a></li>
                 <li><a href="portfolio">Portfolio</a></li>
@@ -140,6 +140,7 @@
             <h1 class="sub-title">Contact Me</h1>
             <div class="social-icons">
                 <p><i class="fa-regular fa-paper-plane"></i> devin.witten@hgs.hiddengeniusproject.org</p>
+                <p><i class="fa-solid fa-phone"></i>(510)-253-5890</p>
                 <a href="https://www.instagram.com/devinterrelle/"><i class="fa-brands fa-instagram"></i></a>
                 <a href="https://x.com/ChefDevardee"><i class="fa-brands fa-twitter-square"></i></a>
                 <a href="https://www.facebook.com/devinterrelle"><i class="fa-brands fa-facebook"></i></a>
