--- a/mail.html
+++ b/mail.html
@@ -14,11 +14,11 @@
         <nav>
             <img src="images/Hidden Genius Project Logo.png" class="logo">
             <ul id="sidemenu">
-                <li><a href="Home">Home</a></li>
-                <li><a href="about">About</a></li>
-                <li><a href="service">Services</a></li>
-                <li><a href="portfolio">Portfolio</a></li>
-                <li><a href="contact">Contact</a></li>
+                <li><a href="#Home">Home</a></li>
+                <li><a href="#About">About</a></li>
+                <li><a href="#Services">Services</a></li>
+                <li><a href="#Portfolio">Portfolio</a></li>
+                <li><a href="#Contact">Contact</a></li>
                 <i class="fa-solid fa-xmark" onclick="closemenu()"></i>
             </ul>
             <i class="fa-solid fa-bars" onclick="openmenu()"></i>
