--- a/mail.html
+++ b/mail.html
@@ -14,8 +14,8 @@
         <nav>
             <img src="images/Hidden Genius Project Logo.png" class="logo">
             <ul id="sidemenu">
-                <li><a href="#Home">Home</a></li>
-                <li><a href="#About">About</a></li>
+                <li><a href="#header">Home</a></li>
+                <li><a href="#about">About</a></li>
                 <li><a href="#services">Services</a></li>
                 <li><a href="#portfolio">Portfolio</a></li>
                 <li><a href="#contact">Contact</a></li>
@@ -110,7 +110,7 @@
                 <div class="layer">
                     <h3>Leader</h3>
                     <p>"In order to make change you have to start the change. Change doesn't come without anyone or anything behind it." - Devin Witten</p>
-                    <a href="#"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+                    <a href="https://docs.google.com/document/d/1jvjKNvvztiGh9arslCusONcxogSuoxCvupEb-0GxUAc/edit?usp=sharing"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
                 </div>   
         </div>
         <div class="work">
@@ -118,7 +118,7 @@
           <div class="layer">
             <h3>Leadership</h3>
             <p>Just because your in the Leadership class, DOES NOT make you a leader!</p>
-            <a href="#"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+            <a href="https://docs.google.com/document/d/1xuGvnd2qhw5bHPd3Ut8r_aDnOaJZ_8pmZvLaWGjwJC0/edit?usp=sharing"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
         </div>  
         </div>
         <div class="work">
@@ -139,7 +139,7 @@
          <div class="contact-left">
             <h1 class="sub-title">Contact Me</h1>
             <div class="social-icons">
-                <p><i class="fa-regular fa-paper-plane"></i> devin.witten@hgs.hiddengeniusproject.org</p>
+                <p><i class="fa-regular fa-envelope"></i> devin.witten@hgs.hiddengeniusproject.org</p>
                 <p><i class="fa-solid fa-phone"></i>(510)-253-5890</p>
                 <a href="https://www.instagram.com/devinterrelle/"><i class="fa-brands fa-instagram"></i></a>
                 <a href="https://x.com/ChefDevardee"><i class="fa-brands fa-twitter-square"></i></a>
