A little bit of everything

--- a/mail.html
+++ b/mail.html
@@ -83,13 +83,13 @@
                 <i class="fa-solid fa-hand-fist"></i>
                 <h2>Activism</h2>
                 <p>Here you'll find more about my activism mostly in my school community</p>
-                <a href="#">Learn More</a>
+                <a href=#>Learn More</a>
             </div>
             <div>
                 <i class="fa-solid fa-book-open"></i>
                 <h2>Leadership</h2>
                 <p>Here you'll find out more about my leadership skills</p>
-                <a href="#">Learn More</a>
+                <a href="#">Learn More in Leadership Section</a>
             </div>
             <div>
                 <i class="fa-solid fa-face-grin-squint-tears"></i>
@@ -108,7 +108,7 @@
             <div class="work">
                 <img src="images/District Strategic Plan Cover.png">
                 <div class="layer">
-                    <h3>Leader</h3>
+                    <h3>Activism</h3>
                     <p>"In order to make change you have to start the change. Change doesn't come without anyone or anything behind it." - Devin Witten</p>
                     <a href="https://docs.google.com/document/d/1jvjKNvvztiGh9arslCusONcxogSuoxCvupEb-0GxUAc/edit?usp=sharing"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
                 </div>   
@@ -126,7 +126,7 @@
             <div class="layer">
                 <h3>Treasure</h3>
                 <p>HIDE THE MONEY YA'LL ITS POOR PEOPLE AROUND😭</p>
-                <a href="#"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+                <a href="https://docs.google.com/document/d/11OX5vCxgJYbj4wP5ZZ07GChtGZtGp5QRM9GKs6eG8pA/edit"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
             </div> 
         </div>
         <a href="#" class="btn">See More</a>
