--- a/mail.html
+++ b/mail.html
@@ -83,7 +83,7 @@
                 <i class="fa-solid fa-hand-fist"></i>
                 <h2>Activism</h2>
                 <p>Here you'll find more about my activism mostly in my school community</p>
-                <a href=#>Learn More</a>
+                <a href=#>Learn More in Activism Section</a>
             </div>
             <div>
                 <i class="fa-solid fa-book-open"></i>
@@ -95,7 +95,7 @@
                 <i class="fa-solid fa-face-grin-squint-tears"></i>
                 <h2>My Life</h2>
                 <p>Below these you will find out more about me, who I am and why I do things I do.</p>
-                <a href="#">Learn More</a>
+                <a href="#">Learn More Here</a>
             </div>
         </div>
     </div>
@@ -111,6 +111,7 @@
                     <h3>Activism</h3>
                     <p>"In order to make change you have to start the change. Change doesn't come without anyone or anything behind it." - Devin Witten</p>
                     <a href="https://docs.google.com/document/d/1jvjKNvvztiGh9arslCusONcxogSuoxCvupEb-0GxUAc/edit?usp=sharing"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+                    
                 </div>   
         </div>
         <div class="work">
